# AIOKAFKA-DOCKER-EXAMPLE

./: README.md  create-topics-and-groups.sh  docker-compose.yml  entrypoint.sh  kafka-config.properties
consumer/: Dockerfile.consumer  consumer.py  pyproject.toml  start.py
producer/: Dockerfile.producer  producer.py  start.py
