[project]
name = "kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Golovin",email = "DSP@DSP.DSP"}
]
requires-python = ">=3.11"
dependencies = [
    "aiokafka (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false